README
To build, all build files are in ./build-files/
Build commands should be run from ./build-files/ folder

>> docker build -f ubuntu-base.docker -t ubuntu-base .

>> docker run -it --hostname=Rapidash-Docker --name=repos-container ubuntu-base
    * clone all repos that require passwords

    BEFORE EXITING THE INTERACTIVE SESSION SAVE CURRENT IMAGE IN ANOTHER WINDOW:
    >> docker save -o repos.save ubuntu-base
    * then can exit from interactive session using ">> exit"

now make the image based on the container
    >> docker commit -m "repos cloned" repos-container repos

Then to load this image with all the changes that were made during the interactive session:
(should not need to do this because it can just be committed)
    >> docker load -i repos.save

To go back into the interactive mode of that container:
    >> docker start -i repos-container

ALL REPOS SHOULD BE CLONED THAT ARE PASSWORD PROTECTED - continue with dockerfiles

>> docker build -f openmpi.docker -t openmpi .
>> docker build -f qt.docker -t qt .
>> docker build -f hdf5.docker -t hdf5 .
>> docker build -f silo.docker -t silo .
>> docker build -f moab.docker -t moab .

Build image with data in directory above
>> docker build -f data.docker -t data ..

Now build whichever version of exnihilo is appropriate
>> docker build -f exnihilo-debug.docker -t exnihilo-debug .

current error message:
96%:
/opt/Scale/Exnihilo/packages/Shift/mc_sensitivity/Fission_Chain_Tally.cc: In member function 'virtual void shift::Fission_Chain_Tally::birth(const Particle_t&, const shift::Tally_Cache&)':
/opt/Scale/Exnihilo/packages/Shift/mc_sensitivity/Fission_Chain_Tally.cc:91:45: error: 'class std::shared_ptr<std::vector<double> >' has no member named 'assign'
             progenitor.response_importances.assign(b_num_responses, 0.0);
                                             ^
/opt/Scale/Exnihilo/packages/Shift/mc_sensitivity/Fission_Chain_Tally.cc: In member function 'virtual void shift::Fission_Chain_Tally::fission(const Particle_t&, const Fission_Site_t&, const shift::Tally_Cache&)':
/opt/Scale/Exnihilo/packages/Shift/mc_sensitivity/Fission_Chain_Tally.cc:160:32: error: 'class std::shared_ptr<std::vector<double> >' has no member named 'assign'
     iter->response_importances.assign(b_num_responses, 0.0);
                                ^
make[2]: *** [Exnihilo/packages/Shift/mc_sensitivity/CMakeFiles/Shift_mc_sensitivity.dir/Fission_Chain_Tally.cc.o] Error 1
make[2]: *** Waiting for unfinished jobs....
